DT-1637 - Fixes blog post metadata colour not showing up on certain colour swatches.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -993,7 +993,7 @@ input[type="search"]::-webkit-search-decoration {
 	padding: 0;
 }
 .menu-subsection-promoted, .menu-item-promoted, .blog-post-metadata {
-	background-color: @background-blocks;
+	background-color: darken(@color-swatch1,3%);
 }
 .menu-item-promoted .inner-item,
 .menu-subsection-wrapper {
